--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
+    "lodash.isstring": "^4.0.0",
     "lodash.template": "^4.0.2",
-    "lodash.isstring": "^4.0.0"
+    "serr": "^0.2.0"
   }
 }
