--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "therror",
   "description": "Create, document, customize and throw node errors easily",
-  "version": "0.2.0",
+  "version": "1.0.0-alpha.1",
   "homepage": "",
   "author": {
     "name": "Javier Mendiara Cañardo",
