--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "url": "https://github.com/therror/therror/issues"
   },
   "main": "lib/therror",
+  "typings": "./lib/therror.d.ts",
   "engines": {
     "node": ">=4"
   },
   "scripts": {
-    "travis": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/environment.js 'test/**/*.spec.js' && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "travis": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/environment.js 'test/**/*.spec.js' && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage && tsc --noEmit",
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R dot test/environment.js 'test/**/*.spec.js'",
-    "lint": "jscs lib && eslint lib",
-    "test": "mocha -R spec test/environment.js 'test/**/*.spec.js'"
+    "lint": "jscs lib && eslint lib && tslint './{lib,test}/**/*.ts'",
+    "test": "mocha -R spec test/environment.js 'test/**/*.spec.js' && tsc --noEmit",
+    "typings": "typings"
   },
   "devDependencies": {
     "chai": "^3.0.0",
@@ -32,7 +34,11 @@
     "jscs": "^3.0.3",
     "mocha": "^2.2.5",
     "sinon": "^1.15.0",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "tslint": "^3.15.1",
+    "tslint-config-typings": "^0.2.3",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.3"
   },
   "keywords": [
     "error",
