--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "therror",
   "description": "Create, document, customize and throw node errors easily",
   "version": "2.0.0",
-  "homepage": "therror.github.io/therror",
+  "homepage": "https://therror.github.io/therror",
   "author": {
     "name": "Javier Mendiara Cañardo",
     "email": "javier.mendiaracanardo@telefonica.com"
@@ -23,10 +23,10 @@
     "travis": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/environment.js 'test/**/*.spec.js' && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage && tsc --noEmit",
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R dot test/environment.js 'test/**/*.spec.js'",
     "lint": "jscs lib && eslint lib && tslint './{lib,test}/**/*.ts'",
-    "test": "mocha -R spec test/environment.js 'test/**/*.spec.js' && tsc --noEmit",
-    "typings": "typings"
+    "test": "mocha -R spec test/environment.js 'test/**/*.spec.js' && tsc --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^6.0.40",
     "chai": "^3.0.0",
     "coveralls": "^2.11.2",
     "eslint": "^2.10.1",
@@ -37,8 +37,7 @@
     "sinon-chai": "^2.8.0",
     "tslint": "^3.15.1",
     "tslint-config-typings": "^0.2.3",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.3"
+    "typescript": "^2.0.3"
   },
   "keywords": [
     "error",
