[[CHORE]] Improve Typescript support for Mixins
Now thanks typescript 2.2 it's not needed to declare the shape for classes created using built-in mixins

Before
```ts
import Therror from 'therror';
import { Classes } from 'therror';

interface MyCustom extends Classes.Loggable, Classes.Namespaced {}
class MyCustom extends Therror.Loggable('info', Therror.Namespaced('MyNS')) {}
```

now
```ts
import Therror from 'therror';

class MyCustom extends Therror.Loggable('info', Therror.Namespaced('MyNS')) {}
```

Breaking changes:
 * Clients with typescript < 2.2 will not be able to read the new definitions

Closes #9

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "travis": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/environment.js 'test/**/*.spec.js' && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage && tsc --noEmit",
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R dot test/environment.js 'test/**/*.spec.js'",
     "lint": "jscs lib && eslint lib && tslint './{lib,test}/**/*.ts'",
-    "test": "mocha -R spec test/environment.js 'test/**/*.spec.js' && tsc --noEmit"
+    "test": "mocha -R spec test/environment.js 'test/**/*.spec.js' && npm run test:ts",
+    "test:ts": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^7.0.13",
