--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "lib/therror",
   "typings": "./lib/therror.d.ts",
   "engines": {
-    "node": ">=4 <8"
+    "node": ">=4"
   },
   "scripts": {
     "travis": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/environment.js 'test/**/*.spec.js' && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage && tsc --noEmit",
